samples/_failures_safe/1761557863_90f3fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16cf427a.c: In function ‘main’:
./samples/SAFE/__tmp_16cf427a.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("No input data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_16cf427a.c:139:9: error: expected declaration or statement at end of input
